<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/collect_info_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/title"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/collect_info_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/link"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_1"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/collect_info_label_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/must_input"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_2"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/collect_info_label_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/self_input"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_3"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/collect_info_label_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/self_input"
            android:inputType="text" />
    </LinearLayout>

</LinearLayout>